# DramaForge

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-workspace.yaml
apps/web/: COPYWRITING_COMPARISON.md  LANDING_PAGE.md  LANDING_PAGE_I18N.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/.next/: app-build-manifest.json  react-loadable-manifest.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: mockData.ts  solana.ts  wagmi.ts
apps/web/public/: README.md
contracts/: .env.example  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: AssetRegistry.sol  DramaHub.sol  ShortDramaHub.sol  StoryNodeRegistry.sol
contracts/contracts/interfaces/: IAssetRegistry.sol  IDramaHub.sol  IStoryNodeRegistry.sol
contracts/scripts/: deploy.ts
docs/: SYSTEM_DESIGN.md
programs/asset-registry/: Cargo.toml
programs/asset-registry/src/: error.rs  lib.rs  state.rs
programs/asset-registry/src/instructions/: mod.rs  record_usage.rs  register_asset.rs
programs/drama-hub/: Cargo.toml
programs/drama-hub/src/: error.rs  lib.rs  state.rs
programs/drama-hub/src/instructions/: complete_drama.rs  create_drama.rs  mod.rs  update_duration.rs
programs/drama-token/: Cargo.toml
programs/drama-token/src/: error.rs  lib.rs  state.rs
programs/drama-token/src/instructions/: burn_spend.rs  initialize_token.rs  mint_reward.rs  mod.rs
programs/story-node/: Cargo.toml
programs/story-node/src/: error.rs  lib.rs  state.rs
programs/story-node/src/instructions/: confirm_node.rs  mod.rs  record_visit.rs
(+48 files in other folders)
