[package]
name = "asset-registry"
version = "0.1.0"
description = "Asset Registry Program - 资产注册（角色/场景/道具）"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
