[package]
name = "drama-hub"
version = "0.1.0"
description = "Drama Hub Program - 剧集管理"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drama_hub"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
