[package]
name = "drama-token"
version = "0.1.0"
description = "Drama Token Program - 平台积分代币 (DRAP)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drama_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
