[package]
name = "story-node"
version = "0.1.0"
description = "Story Node Program - 故事节点管理程序"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "story_node"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
drama-hub = { path = "../drama-hub", features = ["cpi"] }
